<resources>
    <string name="app_name">eDOT</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="server_settings_header">Server</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">URL</string>
    <string name="facility_selection_title">Default health facility</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="items_per_dose">Items per dose</string>
    <string name="add_dispensation">Add Dispensation</string>
    <string name="frequency">Frequency</string>
    <string name="next_clinic_appointment_date">Next clinic appointment date</string>
    <string name="refill_date">Refill date</string>
    <string name="refill_time">Refill time</string>
    <string name="pharmacy_title_text">Pharmacy</string>
    <string name="date_of_birth">Date of birth</string>

    <string-array name="items_per_dose">
        <item>tab(s)</item>
        <item>inj</item>
        <item>syrp</item>
        <item>cap(s)</item>
    </string-array>
    <string-array name="type_of_client">
        <item>new</item>
        <item>relapse</item>
        <item>transfer in</item>
        <item>treatment after lost to follow up</item>
        <item>treatment after failure</item>
        <item>other</item>
    </string-array>
    <string-array name="client_hiv_test_result">
        <item></item>
        <item>Positive</item>
        <item>Negative</item>
    </string-array>
    <string-array name="client_tb_lab_result">
        <item></item>
        <item>Positive</item>
        <item>Negative</item>
    </string-array>
    <string-array name="client_tb_lab_test_type">
        <item></item>
        <item>Lam test</item>
        <item>GeneXpert</item>
        <item>Sputum smear</item>
        <item>Other</item>
    </string-array>
    <string-array name="vaccine_options">
        <item></item>
        <item>pfizer</item>
        <item>johnson and johnson</item>
        <item>oxford astrazeneca</item>
        <item>sinopharm</item>
        <item>moderna</item>
    </string-array>
    <string-array name="level_of_treatment">
        <item></item>
        <item>initial</item>>
        <item>2 months conversion</item>
        <item>3 months conversion</item>
        <item>5 months treatment monitoring</item>>
        <item>6 months discharge</item>>
    </string-array>
    <string-array name="frequency">
        <item></item>
        <item>od</item>
        <item>bd</item>
        <item>td</item>
        <item>qid</item>
    </string-array>
    <string-array name="ep_districts">
        <item></item>
        <item>chadiza </item>
        <item>chama</item>
        <item>chasefu</item>
        <item>chipangali</item>
        <item>chipata</item>
        <item>kasenengwa</item>
        <item>katete</item>
        <item>lumezi</item>
        <item>lundazi</item>
        <item>lusangazi</item>
        <item>mambwe</item>
        <item>nyimba</item>
        <item>petauke</item>
        <item>sinda</item>
        <item>vubwi</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_search_client">SearchClientActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_client_status">ClientStatusActivity</string>
    <string name="pref_previously_started">app_prev_started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_client_hivtesting_and_treatment">
        ClientHIVTestingAndTreatmentActivity
    </string>

</resources>